--- a/views/obra/insumosOrcamento.html
+++ b/views/obra/insumosOrcamento.html
@@ -10,42 +10,44 @@
         {{=form_pesq.custom.widget.composicao}}
     </div>
     <div class="col-md-3">
+        <div style="margin-top: 25px">
         {{=form_pesq.custom.submit}}
+        </div>
     </div>
 </div>
 {{=form_pesq.custom.end}}
 <p></p>
-<div class="col-md-12">
-    <table class="table table-striped table-hover table-bordered">
-        <thead>
-            <tr>
-                <th>Código</th>
-                <th>Insumo</th>
-                <th>Quantidade</th>
-            </tr>
-        </thead>
-        <tbody>
-            {{for i,row in enumerate(rows):}}
-                {{if i==1000: break}}
-                    <tr>
-                        <td>{{=Insumo(row.orcamentoInsumos.insumo).codigo}}</td>
-                        <td>{{=Insumo(row.orcamentoInsumos.insumo).descricao}}</td>
-                        <td>{{=row[sum]}}</td>
-                    </tr>
-                {{pass}}
-            {{pass}}
-        </tbody>
-    </table>
+
+{{=insumos}}
+
+<div class="right">
+    <h4>Total de Insumos : R$ {{=totalInsumos}}</h4>
+    {{=voltar('orcamentos')}}
 </div>
+
 
 <script type="text/javascript">
 jQuery(function($){
-  $("input[value=Filtrar]").hide();
+  $("input[value=Gerar]").hide();
   $("#pesquisar_etapa").change(function() {
-    $("input[value=Filtrar]").click();
+    $("input[value=Gerar]").click();
   });
     $("#pesquisar_composicao").change(function() {
-    $("input[value=Filtrar]").click();
+    $("input[value=Gerar]").click();
   });
 });
 </script>
+
+<script>
+$(document).ready(function(){
+    $('#insumosOrcamento').DataTable({
+        paging: false,
+        scrollY: 300,
+        scrollCollapse: true,
+        searching: false,
+        ordering:  false,
+        language: {"url": "//cdn.datatables.net/plug-ins/1.10.13/i18n/Portuguese-Brasil.json"},
+    });
+});
+</script>
+
