--- a/views/obra/orcamentoMaodeObra.html
+++ b/views/obra/orcamentoMaodeObra.html
@@ -1,3 +1,8 @@
 <div class="well">
     {{=formOrcamentoMaodeObra}}
 </div>
+<div class="right">
+    <h4>Total da Mão de Obra: R$ {{=totalMaodeObra}}</h4>
+    {{=voltar('orcamentos')}}
+</div>
+
