--- a/views/cadastro/cliente.html
+++ b/views/cadastro/cliente.html
@@ -5,22 +5,39 @@
         <div class="panel-body">
             <ul class="nav nav-tabs">
                 <li class="active"><a data-toggle="tab" href="#home">Dados Cadastrais</a></li>
-                    <li><a data-toggle="tab" href="#menu1">Obras</a></li>
+                    <li><a data-toggle="tab" href="#menu1">Endereços</a></li>
+                    <li><a data-toggle="tab" href="#menu2">Contatos</a></li>
+                    <li><a data-toggle="tab" href="#menu3">Demandas</a></li>
                 </ul>
             <div class="tab-content">
                 <div id="home" class="tab-pane fade in active">
-                    {{=form_cliente.custom.begin}}
+                    {{=formCliente.custom.begin}}
                     <div class="well">
                         <div class="row">
                             <div class="col-md-6">
-                                {{=form_cliente.custom.label.cadastro}}
-                                {{=form_cliente.custom.widget.cadastro}}
+                                {{=formCliente.custom.label.nome}}
+                                {{=formCliente.custom.widget.nome}}
                             </div>
                             <div class="col-md-6">
-                                {{=form_cliente.custom.label.nome}}
-                                {{=form_cliente.custom.widget.nome}}
+                                {{=formCliente.custom.label.razao}}
+                                {{=formCliente.custom.widget.razao}}
                             </div>
                         </div>
+                        <div class="row">
+                            <div class="col-md-4">
+                                <label>Tipo de Pessoa</label>
+                                {{=formCliente.custom.widget.tipo}}
+                            </div>
+                            <div class="col-md-4">
+                                <label id="cadastros_cnpj_cpf__label">CPF</label>
+                                {{=formCliente.custom.widget.cnpj_cpf}}
+
+                            </div>
+                            <div class="col-md-4">
+                                <label id="cadastros_ie_rg__label">RG</label>
+                                {{=formCliente.custom.widget.ie_rg}}
+                            </div>
+                            </div>
                         <div class="row">
                             <p></p>
                         </div>
@@ -28,24 +45,60 @@
                     <div class="panel panel-info">
                         <div class="panel-body">
                             <div class="right">
-                                {{=form_cliente.custom.submit}}
+                                {{=formCliente.custom.submit}}
                                 {{=btnNovo}}
                                 {{=btnVoltar}}
                                 {{=btnExcluir}}
                             </div>
                         </div>
                     </div>
-                    {{=form_cliente.custom.end}}
+                    {{=formCliente.custom.end}}
                 </div>
                 <div id="menu1" class="tab-pane fade">
-                    {{=form_obra}}
+                    {{=formEnderecos}}
+                </div>
+                <div id="menu2" class="tab-pane fade">
+                    {{=formContatos}}
+                </div>
+                <div id="menu3" class="tab-pane fade">
+                    {{=formDemandas}}
                 </div>
             </div>
         </div>
     </div>
 </div>
 
-
+<script type="text/javascript">
+$(document).ready(function(){
+    if($('#clientes_tipo option:selected').val() == 'Física'){
+       $("#clientes_cnpj_cpf").mask("999.999.999-99");
+       $("#clientes_ie_rg").mask("99.999.999-9");
+       $("#clientes_cnpj_cpf__label").text('CPF');
+       $("#clientes_ie_rg__label").text('RG');
+     }
+     else {
+       $("#clientes_cnpj_cpf").mask("99.999.999/9999-99");
+       $("#clientes_ie_rg").unmask();
+       $("#clientes_cnpj_cpf__label").text('CNPJ');
+       $("#clientes_ie_rg__label").text('Incrição Estadual');
+     }
+   // Alterando as máscaras conforme escolhe do tipo de pessoa.
+   $('#clientes_tipo').on('change',function() {
+     if($('#clientes_tipo option:selected').val() == 'Física'){
+       $("#clientes_cnpj_cpf").mask("999.999.999-99");
+       $("#clientes_ie_rg").mask("99.999.999-9");
+       $("#clientes_cnpj_cpf__label").text('CPF');
+       $("#clientes_ie_rg__label").text('RG');
+     }
+     else {
+       $("#clientes_cnpj_cpf").mask("99.999.999/9999-99");
+       $("#clientes_ie_rg").unmask();
+       $("#clientes_cnpj_cpf__label").text('CNPJ');
+       $("#clientes_ie_rg__label").text('Incrição Estadual');
+     }
+   });
+});
+</script>
 
 
 
