--- a/views/cadastro/cliente.html
+++ b/views/cadastro/cliente.html
@@ -25,19 +25,19 @@
                         </div>
                         <div class="row">
                             <div class="col-md-4">
-                                <label>Tipo de Pessoa</label>
+                                {{=formFornecedor.custom.label.tipo}}
                                 {{=formCliente.custom.widget.tipo}}
                             </div>
                             <div class="col-md-4">
-                                <label id="cadastros_cnpj_cpf__label">CPF</label>
+                                {{=formFornecedor.custom.label.cnpj_cpf}}
                                 {{=formCliente.custom.widget.cnpj_cpf}}
 
                             </div>
                             <div class="col-md-4">
-                                <label id="cadastros_ie_rg__label">RG</label>
+                                {{=formFornecedor.custom.label.ie_rg}}
                                 {{=formCliente.custom.widget.ie_rg}}
                             </div>
-                            </div>
+                        </div>
                         <div class="row">
                             <p></p>
                         </div>
