--- a/views/cadastro/fornecedor.html
+++ b/views/cadastro/fornecedor.html
@@ -5,20 +5,36 @@
         <div class="panel-body">
             <ul class="nav nav-tabs">
                 <li class="active"><a data-toggle="tab" href="#home">Dados Cadastrais</a></li>
-                    <li><a data-toggle="tab" href="#menu1">Insumos</a></li>
+                    <li><a data-toggle="tab" href="#menu1">Endereços</a></li>
+                    <li><a data-toggle="tab" href="#menu2">Contatos</a></li>
+                    <li><a data-toggle="tab" href="#menu3">Insumos</a></li>
                 </ul>
             <div class="tab-content">
                 <div id="home" class="tab-pane fade in active">
-                    {{=form_fornecedor.custom.begin}}
+                    {{=formFornecedor.custom.begin}}
                     <div class="well">
                         <div class="row">
                             <div class="col-md-6">
-                                {{=form_fornecedor.custom.label.cadastro}}
-                                {{=form_fornecedor.custom.widget.cadastro}}
+                                {{=formFornecedor.custom.label.nome}}
+                                {{=formFornecedor.custom.widget.nome}}
                             </div>
                             <div class="col-md-6">
-                                {{=form_fornecedor.custom.label.nome}}
-                                {{=form_fornecedor.custom.widget.nome}}
+                                {{=formFornecedor.custom.label.razao}}
+                                {{=formFornecedor.custom.widget.razao}}
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-4">
+                                {{=formFornecedor.custom.label.tipo}}
+                                {{=formFornecedor.custom.widget.tipo}}
+                            </div>
+                            <div class="col-md-4">
+                                {{=formFornecedor.custom.label.cnpj_cpf}}
+                                {{=formFornecedor.custom.widget.cnpj_cpf}}
+                            </div>
+                            <div class="col-md-4">
+                                {{=formFornecedor.custom.label.ie_rg}}
+                                {{=formFornecedor.custom.widget.ie_rg}}
                             </div>
                         </div>
                         <div class="row">
@@ -28,17 +44,23 @@
                     <div class="panel panel-info">
                         <div class="panel-body">
                             <div class="right">
-                                {{=form_fornecedor.custom.submit}}
+                                {{=formFornecedor.custom.submit}}
                                 {{=btnNovo}}
                                 {{=btnVoltar}}
                                 {{=btnExcluir}}
                             </div>
                         </div>
                     </div>
-                    {{=form_fornecedor.custom.end}}
+                    {{=formFornecedor.custom.end}}
                 </div>
                 <div id="menu1" class="tab-pane fade">
-                    {{=formInsumo}}
+                    {{=formEnderecos}}
+                </div>
+                <div id="menu2" class="tab-pane fade">
+                    {{=formContatos}}
+                </div>
+                <div id="menu3" class="tab-pane fade">
+                    {{=formInsumo}}                    
                 </div>
             </div>
         </div>
