--- a/views/cadastro/cliente.html
+++ b/views/cadastro/cliente.html
@@ -25,16 +25,16 @@
                         </div>
                         <div class="row">
                             <div class="col-md-4">
-                                {{=formFornecedor.custom.label.tipo}}
+                                {{=formCliente.custom.label.tipo}}
                                 {{=formCliente.custom.widget.tipo}}
                             </div>
                             <div class="col-md-4">
-                                {{=formFornecedor.custom.label.cnpj_cpf}}
+                                {{=formCliente.custom.label.cnpj_cpf}}
                                 {{=formCliente.custom.widget.cnpj_cpf}}
 
                             </div>
                             <div class="col-md-4">
-                                {{=formFornecedor.custom.label.ie_rg}}
+                                {{=formCliente.custom.label.ie_rg}}
                                 {{=formCliente.custom.widget.ie_rg}}
                             </div>
                         </div>
