--- a/views/cadastro/planoContas.html
+++ b/views/cadastro/planoContas.html
@@ -36,10 +36,10 @@
                         </div>
                     </div>
                     <div id="menu1" class="tab-pane fade">
-                            {{=formPc2}}
+                        {{=loadPc2}}
                     </div>
                     <div id="menu2" class="tab-pane fade">
-                        
+                        {{=loadPc3}}
                     </div>
                 </div>
             </div>
