--- a/views/cadastro/demandas.html
+++ b/views/cadastro/demandas.html
@@ -2,9 +2,9 @@
 {{extend 'layout.html'}}
 <div class="container">
     <div class="panel panel-info">
-        <div class="panel-heading"><h4>Obras</h4></div>
+        <div class="panel-heading"><h4>Demandas</h4></div>
             <div class="panel-body">
-                {{=form_obras}}
+                {{=formDemandas}}
             </div>
         </div>
     </div>
