--- a/views/pagar/pagar_parcelas.html
+++ b/views/pagar/pagar_parcelas.html
@@ -20,22 +20,18 @@
             </div>
         </div>
     </div>
-    <div class="panel panel-info">
-        <div class="panel-body">
-            <div class="right">
-                {{=formParcelas[1].custom.submit}}
-                {{=btnVoltar}}
-                {{=btnExcluir}}
-            </div>
-        </div>
+    <div class="left" style="margin-top: 20px;margin-left: 15px>
+        {{=formParcelas[1].custom.submit}}
+        {{=btnVoltar}}
+        {{=btnExcluir}}
     </div>
     {{=formParcelas[1].custom.end}}
 {{else:}}
     <div class="well">
         {{=formParcelas}}
-        <div class="left">
-            <b> Total Parcelas: {{=total_parcela}}</b>
-        </div>
+    </div>
+    <div class="left" style="margin-top: 20px;margin-left: 15px">
+        <b> Total Parcelas: {{=total_parcela}}</b>
     </div>
 {{pass}}
 
