Plano de Contas

--- a/views/cadastro/planoContas3.html
+++ b/views/cadastro/planoContas3.html
@@ -15,10 +15,17 @@
                 {{=formPc3[1].custom.widget.conta}}
             </div>   
         </div> 
+        <div class="row">
+            <p></p>
+            <div class="col-md-4">
+                {{=formPc3[1].custom.label.despesa}}
+                {{=formPc3[1].custom.widget.despesa}}
+            </div>   
+        </div>   
         <div class="right" style="margin-top: 30PX; ">
             {{=formPc3[1].custom.submit}}
             {{=voltar1('planocontas3')}}
-        </div>
+        </div>    
         {{=formPc3[1].custom.end}}
     {{else:}}
         {{=formPc3}}
