--- a/views/pagar/pagar_despesas.html
+++ b/views/pagar/pagar_despesas.html
@@ -2,21 +2,16 @@
     {{=formDespesas[1].custom.begin}}
     <div class="well">
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-6">
                 {{=formDespesas[1].custom.label.despesa}}
                 {{=formDespesas[1].custom.widget.despesa}}
             </div>
 
-            <div class="col-md-4">
-                {{=formDespesas[1].custom.label.demanda}}
-                {{=formDespesas[1].custom.widget.demanda}}
-            </div>
-
-            <div class="col-md-2">
+            <div class="col-md-3">
                 {{=formDespesas[1].custom.label.dtdespesa}}
                 {{=formDespesas[1].custom.widget.dtdespesa}}
             </div>
-            <div class="col-md-2">
+            <div class="col-md-3">
                 {{=formDespesas[1].custom.label.valor}}
                 {{=formDespesas[1].custom.widget.valor}}
             </div>
@@ -35,7 +30,7 @@
 {{else:}}
     <div class="well">
         {{=formDespesas}}
-        <div class="left">
+        <div class="left" style="margin-left: 10px; margin-top: 60px">
             <b> Total Despesas: {{=total_despesas}}</b>
         </div>
     </div>
