--- a/views/cadastro/tipoInsumo.html
+++ b/views/cadastro/tipoInsumo.html
@@ -7,13 +7,17 @@
             <div class="panel-body">
                 <div class="well">
                     <div class="row">
-                        <div class="col-md-1">
+                        <div class="col-md-2">
                             {{=formTpInsumo[1].custom.label.sigla}}
                             {{=formTpInsumo[1].custom.widget.sigla}}
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-4">
                             {{=formTpInsumo[1].custom.label.descricao}}
                             {{=formTpInsumo[1].custom.widget.descricao}}
+                        </div>
+                        <div class="col-md-4">
+                            {{=formTpInsumo[1].custom.label.conta}}
+                            {{=formTpInsumo[1].custom.widget.conta}}
                         </div>
                     </div>
                 </div>
