--- a/views/cadastro/fornecedor.html
+++ b/views/cadastro/fornecedor.html
@@ -66,3 +66,35 @@
         </div>
     </div>
 </div>
+
+<script type="text/javascript">
+$(document).ready(function(){
+    if($('#fornecedores_tipo option:selected').val() == 'Física'){
+       $("#fornecedores_cnpj_cpf").mask("999.999.999-99");
+       $("#fornecedores_ie_rg").mask("99.999.999-9");
+       $("#fornecedores_cnpj_cpf__label").text('CPF');
+       $("#fornecedores_ie_rg__label").text('RG');
+     }
+     else {
+       $("#fornecedores_cnpj_cpf").mask("99.999.999/9999-99");
+       $("#fornecedores_ie_rg").unmask();
+       $("#fornecedores_cnpj_cpf__label").text('CNPJ');
+       $("#fornecedores_ie_rg__label").text('Incrição Estadual');
+     }
+   // Alterando as máscaras conforme escolhe do tipo de pessoa.
+   $('#fornecedores_tipo').on('change',function() {
+     if($('#fornecedores_tipo option:selected').val() == 'Física'){
+       $("#fornecedores_cnpj_cpf").mask("999.999.999-99");
+       $("#fornecedores_ie_rg").mask("99.999.999-9");
+       $("#fornecedores_cnpj_cpf__label").text('CPF');
+       $("#fornecedores_ie_rg__label").text('RG');
+     }
+     else {
+       $("#fornecedores_cnpj_cpf").mask("99.999.999/9999-99");
+       $("#fornecedores_ie_rg").unmask();
+       $("#fornecedores_cnpj_cpf__label").text('CNPJ');
+       $("#fornecedores_ie_rg__label").text('Incrição Estadual');
+     }
+   });
+});
+</script>
