--- a/views/receber/entrada_lista.html
+++ b/views/receber/entrada_lista.html
@@ -1,6 +1,11 @@
 {{left_sidebar_enabled,right_sidebar_enabled=False,('message' in globals())}}
 {{extend 'layout.html'}}
 <div class="container">
-	<h3> Entradas de Contas a Receber </h3>
-	{{=grid_receber}}
+    <div class="panel panel-info">
+        <div class="panel-heading"><h4> Entradas </h4></div>
+            <div class="panel-body">
+                {{=grid_receber}}
+            </div>
+        </div>
+    </div>
 </div>
