--- a/views/receber/receber_parcelas.html
+++ b/views/receber/receber_parcelas.html
@@ -1,5 +1,38 @@
-<head>
-  <script src="{{=URL('static', 'js/Mascaras.js')}}" type="text/javascript"></script>
-</head>
-<h3> Detalhe das Parcelas </h3>
-{{=form}}
+{{if formParcelas.create_form or formParcelas.update_form:}}
+    {{=formParcelas[1].custom.begin}}
+    <div class="well">
+        <div class="row">
+            <div class="col-md-2">
+                {{=formParcelas[1].custom.label.parcela}}
+                {{=formParcelas[1].custom.widget.parcela}}
+            </div>
+            <div class="col-md-3">
+                {{=formParcelas[1].custom.label.vencimento}}
+                {{=formParcelas[1].custom.widget.vencimento}}
+            </div>
+            <div class="col-md-3">
+                {{=formParcelas[1].custom.label.valor}}
+                {{=formParcelas[1].custom.widget.valor}}
+            </div>
+        </div>
+    </div>
+    <div class="left" style="margin-top: 20px;margin-left: 15px">
+        {{=formParcelas[1].custom.submit}}
+        {{=btnVoltar}}
+        {{=btnExcluir}}
+    </div>
+    {{=formParcelas[1].custom.end}}
+{{else:}}
+    <div class="well">
+        {{=formParcelas}}
+    </div>
+    <div class="left" style="margin-top: 20px;margin-left: 15px">
+        <b> Total Parcelas: {{=total_parcela}}</b>
+    </div>
+{{pass}}
+
+<script type="text/javascript">
+jQuery(function($){
+   $("#receber_parcelas_parcela").attr("disabled", true);
+});
+</script>
