--- a/views/pagar/pagar_parcelas.html
+++ b/views/pagar/pagar_parcelas.html
@@ -2,25 +2,21 @@
     {{=formParcelas[1].custom.begin}}
     <div class="well">
         <div class="row">
-            <div class="col-md-1">
+            <div class="col-md-2">
                 {{=formParcelas[1].custom.label.parcela}}
                 {{=formParcelas[1].custom.widget.parcela}}
             </div>
-            <div class="col-md-2">
+            <div class="col-md-3">
                 {{=formParcelas[1].custom.label.vencimento}}
                 {{=formParcelas[1].custom.widget.vencimento}}
             </div>
-            <div class="col-md-2">
+            <div class="col-md-3">
                 {{=formParcelas[1].custom.label.valor}}
                 {{=formParcelas[1].custom.widget.valor}}
             </div>
-            <div class="col-md-2">
-                {{=formParcelas[1].custom.label.portador}}
-                {{=formParcelas[1].custom.widget.portador}}
-            </div>
         </div>
     </div>
-    <div class="left" style="margin-top: 20px;margin-left: 15px>
+    <div class="left" style="margin-top: 20px;margin-left: 15px">
         {{=formParcelas[1].custom.submit}}
         {{=btnVoltar}}
         {{=btnExcluir}}
