--- a/views/receber/receber.html
+++ b/views/receber/receber.html
@@ -1,18 +1,32 @@
 {{left_sidebar_enabled,right_sidebar_enabled=False,('message' in globals())}}
 {{extend 'layout.html'}}
 {{include 'modal.html'}}
-<h3> Lista de Pagamentos </h3>
-{{=voltar}}
 <div class="container">
-  <ul class="nav nav-tabs">
-    <li class="active"><a data-toggle="tab" href="#home">Pagamentos</a></li>
-    <li><a data-toggle="tab" href="#menu1">Cheques</a></li>
-  </ul>
-  <div class="tab-content">
-    <div id="home" class="tab-pane fade in active">
-        {{=form_parcelas}}     
-        {{=form_pagamentos}}
+    <div class="panel panel-info">
+        <div class="panel-heading"><h4>Recebimetnos de Duplicatas</h4></div>
+        <div class="panel-body">
+            <ul class="nav nav-tabs">
+                <li class="active"><a data-toggle="tab" href="#home">Duplicatas</a></li>
+                <li><a data-toggle="tab" href="#menu1">Recebimentos</a></li>
+                <li><a data-toggle="tab" href="#menu2">Cheques</a></li>
+            </ul>
+            <div class="tab-content">
+                <div id="home" class="tab-pane fade in active">
+                    {{=formParcelas}}
+                </div>
+            <div id="menu1" class="tab-pane fade">
+                {{=formRecebimentos}}
+            </div>
+            <div id="menu2" class="tab-pane fade">
+                {{=formCheques}}
+            </div>
+            <div class="panel panel-info">
+                <div class="panel-body">
+                    <div class="right">
+                        {{=btnVoltar}}
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-  <div id="menu1" class="tab-pane fade">    
-  </div>
 </div>
