--- a/views/obra/obras.html
+++ b/views/obra/obras.html
@@ -1,9 +1,9 @@
 {{extend 'layout.html'}}
 <div class="container">
     <div class="panel panel-info">
-        <div class="panel-heading"><h6>Atividades</h6></div>
+        <div class="panel-heading"><h4>Obras</h4></div>
             <div class="panel-body">
-                {{=gridAtividades}}
+                {{=gridObras}}
             </div>
         </div>
     </div>
