--- a/views/web2py_ajax.html
+++ b/views/web2py_ajax.html
@@ -20,6 +20,10 @@ response.files.append(URL('static','datatable/js/jquery.dataTables.min.js'))
 response.files.append(URL('static','datatable/css/jquery.dataTables.min.css'))
 #response.files.append('//cdn.datatables.net/plug-ins/1.10.13/sorting/date-uk.js')
 
+response.files.append(URL('static','treegrid/css/ry.treegrid.css'))
+response.files.append(URL('static','treegrid/js/jquery.treegrid.js'))
+response.files.append(URL('static','treegrid/js/jquery.treegrid.bootstrap3.js'))
+
 response.include_meta()
 response.include_files()
 }}
