--- a/views/obra/obra_atividades.html
+++ b/views/obra/obra_atividades.html
@@ -24,7 +24,7 @@
     <thead>
         <tr>
           <th>Item</th>
-          <th>Quantidade</th>
+          <th style="text-align: center;">Quantidade</th>
         </tr>
     </thead>
     <body>
@@ -37,7 +37,7 @@
         {{else:}}
             <tr class="treegrid-{{=linha['c']}} treegrid-parent-{{=linha['p']}}">
             <td>{{=linha['item']}}</td>
-            <td class="editavel" id="{{=linha['id']}}">{{=linha['qtde']}}</td>
+            <td class="editavel" id="{{=linha['id']}}" style="text-align: center;">{{=linha['qtde']}}</td>
             </tr>
         {{pass}}
     {{pass}}
@@ -64,7 +64,9 @@ $(document).ready(function() {
       var conteudoOriginal = $(this).text();
       var novoElemento = $('<input/>', {
         type: 'text',
-        value: conteudoOriginal
+        value: conteudoOriginal,
+        class: 'decimal form-control',
+        style: 'width:100px;margin:auto;text-align:center'
       });
       $(this).html(novoElemento.bind('blur keydown', function(e) {
         var keyCode = e.which;
